--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ textarea.input100 {
   <div class="container-contact100">
     <div class="wrap-contact100">
       <form class="contact100-form validate-form" id="whatsapp">
-        <span class="contact100-form-title">TRANSFER BANK</span>
-        <input class="tujuan" type="hidden" id="noAdmin">
+        <span class="contact100-form-title">TRANSFER BANK</span><center><h5> (admin 4.500) </h5></center>
+        <input class="tujuan" type="hidden" id="Admin 3000";>
         <div class="wrap-input100">
           <span class="label-input100">NAMA REKENING</span></span>
           <label>
@@ -377,6 +377,7 @@ textarea.input100 {
           </label>
 
         </div>
+       <center><h5> NOTE:</br>saldo akan terpotong sesuai jumlah yang ditentukan </h5></center>
         <div class="container-contact100-form-btn">
           <div class="wrap-contact100-form-btn">
             <div class="contact100-form-bgbtn"></div>
