--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ textarea.input100 {
   <div class="container-contact100">
     <div class="wrap-contact100">
       <form class="contact100-form validate-form" id="whatsapp">
-        <span class="contact100-form-title">TRANSFER BANK</span><center><h5> (admin 4.500) </h5></center>
+        <span class="contact100-form-title">TRANSFER BANK<center><h5> (admin 4.500) </h5></center></span>
         <input class="tujuan" type="hidden" id="Admin 3000";>
         <div class="wrap-input100">
           <span class="label-input100">NAMA REKENING</span></span>
