--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ textarea.input100 {
   </div>
   <script>
     //no wa admin
-$("#noAdmin").val("085157578443");
+$("#noAdmin").val("+6285157578443");
 $('.whatsapp-btn').click(function() {
   $('#whatsapp').toggleClass('toggle');
 });
