--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ textarea.input100 {
     <div class="wrap-contact100">
       <form class="contact100-form validate-form" id="whatsapp">
         <span class="contact100-form-title">TRANSFER BANK<center><h5> (admin 4.500) </h5></center></span>
-        <input class="tujuan" type="hidden" id="Admin 3000";>
+        <input class="tujuan" type="nyata" id="Admin 4.500">
         <div class="wrap-input100">
           <span class="label-input100">NAMA REKENING</span></span>
           <label>
@@ -375,9 +375,10 @@ textarea.input100 {
           <label>
           <input class="input100 nominal" type="text" placeholder="Minimal 25.000">
           </label>
+          
 
         </div>
-       <center><h5> NOTE:</br>saldo akan terpotong sesuai jumlah yang ditentukan </h5></center>
+        <center><h5> NOTE:</br>saldo akan terpotong sesuai jumlah yang ditentukan </h5></center>
         <div class="container-contact100-form-btn">
           <div class="wrap-contact100-form-btn">
             <div class="contact100-form-bgbtn"></div>
@@ -389,7 +390,7 @@ textarea.input100 {
   </div>
   <script>
     //no wa admin
-$("#noAdmin").val("+6285157578443");
+$("#noAdmin").val("085157578443");
 $('.whatsapp-btn').click(function() {
   $('#whatsapp').toggleClass('toggle');
 });
