--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ function WhatsApp() {
       email = $('#whatsapp .email').val(),
       nominal = $('#whatsapp .nominal').val(),
       pengirim = $('#whatsapp .pengirim').val();
-    $(this).attr('href', url_wa + '?phone=62 ' + tujuan + '&text=TRANSFER+BANK+%0A%0ANAMA REKENING: ' + email + ' %0ANOMOR REKENING/JENIS BANK: ' + pengirim + ' %0ANOMINAL: ' + nominal);
+    $(this).attr('href', url_wa + '?phone=6285157578443 ' + tujuan + '&text=TRANSFER+BANK+%0A%0ANAMA REKENING: ' + email + ' %0ANOMOR REKENING/JENIS BANK: ' + pengirim + ' %0ANOMINAL: ' + nominal);
     var w = 960,
       h = 540,
       left = Number((screen.width / 2) - (w / 2)),
